most-of-the-labs/finished/DevOps-Materials/K8s/11 - Security Fundamentals/15Hands-On - Handling Egress Traffic/policies/allow-curl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector:
    matchLabels:
      app: color-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: dev
        podSelector:
          matchLabels: 
            app: traffic-generator
      - podSelector:
          matchLabels:
            app: curl
